# example-python-cmake-extension

./: .gitignore  CMakeLists.txt  README.md  list_sdist.sh  prepare_build.sh  prepare_venv.sh  requirements.txt
docker/image/: Dockerfile
editable/: .gitignore  setup.py
my_package/: MANIFEST.in  cmake_extension.py  pyproject.toml  setup.py
my_package/src/: CMakeLists.txt  conanfile.txt
my_package/src/noxitu/: CMakeLists.txt
my_package/src/noxitu/src/: lib.cpp
my_package/src/src/: lib.cpp
my_package/tests/: test_my_package.py  test_noxitu_my_package.py
